--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.16.1",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-charts": "^7.10.0",
+    "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.3",
     "dotenv": "^16.4.5",
     "mongodb": "^6.8.0",
@@ -27,6 +28,7 @@
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "styled-components": "^6.1.11",
     "swiper": "^11.1.4"
